RESOLVED FIXED204542
REGRESSION (r252792?): 6 inspector/canvas tests crashing
https://bugs.webkit.org/show_bug.cgi?id=204542
Summary REGRESSION (r252792?): 6 inspector/canvas tests crashing
Aakash Jain
Reported 2019-11-22 17:52:08 PST
Following tests started crashing recently: inspector/canvas/recording-2d-frameCount.html inspector/canvas/recording-2d-saves.html inspector/canvas/recording-bitmaprenderer-frameCount.html inspector/canvas/recording-webgl-frameCount.html inspector/canvas/recording-webgl-snapshots.html inspector/canvas/setRecordingAutoCaptureFrameCount.html e.g.: https://ews-build.webkit.org/#/builders/17/builds/7186
Attachments
Fixes the bug (1.60 KB, patch)
2019-11-22 18:24 PST, Ryosuke Niwa
no flags
Fixes the bug (2.95 KB, patch)
2019-11-22 18:34 PST, Ryosuke Niwa
ap: review+
Aakash Jain
Comment 2 2019-11-22 17:53:23 PST
Seems regression from either r252790 or r252792.
Jonathan Bedard
Comment 4 2019-11-22 17:55:15 PST
I'm pretty much positive it's r252792. Look at what files changed: https://results.webkit.org/commits?before_id=252792&after_id=252789
Radar WebKit Bug Importer
Comment 5 2019-11-22 17:56:20 PST
Jonathan Bedard
Comment 6 2019-11-22 17:57:19 PST
(In reply to Jonathan Bedard from comment #4) > I'm pretty much positive it's r252792. > > Look at what files changed: > https://results.webkit.org/commits?before_id=252792&after_id=252789 Although I suppose that r252792 could have broken the canvas stuff and then r252790 independently broke the inspector stuff.
Ryosuke Niwa
Comment 7 2019-11-22 18:14:54 PST
Oops, I just landed a patch which would make reverting this harder. Let me see if I can figure something out...
Ryosuke Niwa
Comment 8 2019-11-22 18:24:11 PST
Created attachment 384220 [details] Fixes the bug
Ryosuke Niwa
Comment 9 2019-11-22 18:34:33 PST
Created attachment 384222 [details] Fixes the bug
Devin Rousso
Comment 10 2019-11-22 18:52:43 PST
Comment on attachment 384220 [details] Fixes the bug r=me, this actually should be enough as we shouldn’t be adding anything to `m_recordingCanvasIdentifiers` in this loop. If anything, it should already be empty at the end of this loop since each item gets removed inside `InspectorCanvasAgent::didFinishRecordingCanvasFrame`. Thanks for the quick fix!
Ryosuke Niwa
Comment 11 2019-11-22 19:30:13 PST
Comment on attachment 384220 [details] Fixes the bug Clearing flags on attachment: 384220 Committed r252823: <https://trac.webkit.org/changeset/252823>
Ryosuke Niwa
Comment 12 2019-11-22 19:30:15 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.