REGRESSION (r252792?): 6 inspector/canvas tests crashing https://bugs.webkit.org/show_bug.cgi?id=204542

Reviewed by Devin Rousso.

Copy the list of identifiers to a Vector before iterating over it
since m_identifierToInspectorCanvas could be mutated meanwhile.

* inspector/agents/InspectorCanvasAgent.cpp:
(WebCore::InspectorCanvasAgent::recordCanvasAction):


Canonical link: https://commits.webkit.org/217798@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252823 268f45cc-cd09-0410-ab3c-d52691b4dbfc